			CHANGELOG for KAME kit

$Id: CHANGELOG,v 1.280 1999/11/20 20:50:34 itojun Exp $

<199911>
Sun Nov 21 05:49:14 JST 1999  itojun@iijlab.net
	* openbsd/sys/dev/ic/am7990.c: for inbound packets, allocate mbuf
	  cluster whenever desired.  this is to make "le" driver conform to
	  KAME mbuf chain requirement.

Sat Nov 20 21:43:26 JST 1999  itojun@iijlab.net
	* openbsd/sys/netinet/udp_usrreq.c: fix panic on interface down
	  in udp6_ctlinput().  fixes KAME PR 175.
	* kame/sys/netinet6/ip6protosw.h: fix panic on big endian openbsd
	  machines (short/int mismatch with struct protosw).

1999-11-19  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/pim6sd/config.c (config_vifs_from_kernel): considers
	loopback and non multicast-capable interfaces, since some routers
	have global addresses only on such interfaces.
	Also, anycast addresses are now ignored.

Fri Nov 19 13:20:24 1999  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* kame/kame/{pim6dd, pim6sd, rtadvd, rtsold}: in looking up
	interface information, comparing interface name between IFs which
	duplicate name partly, such as 'gif1' and 'gif10', fails. It's
	caused by lack of length comparation.

Tue Nov 16 20:17:22 1999  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* freebsd3/ports/openssh: IPv6-enable openssh.
	  obtained from fujiwara@rcac.tdi.co.jp

Thu Nov 18 06:45:45 GMT 1999  itojun@iijlab.net
	* openbsd: upgrade base version to OpenBSD 2.6.

Thu Nov 18 12:20:02 JST 1999  itojun@iijlab.net
	* netbsd/pkgsrc/net/ucd-snmp, freebsd[23]/ports/ucd-snmp,
	  openbsd/ports/net/ucd-snmp: upgrade to latest IPv6 patch.
	  tcp/udp MIB number is fixed.
	  From: Niels Baggesen <Niels.Baggesen@uni-c.dk>

1999-11-17  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/tcpdump/print-pim.c (pimv2_print):
	  corrected offset check and calculation for the RP holdtime and
	  priority fields of Bootstraps.

Wed Nov 17 13:38:40 1999  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>